aqui subo los cambios con sass acorde a la tercera entrega

--- a/pages/Esports.html
+++ b/pages/Esports.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <title>EsportsNews</title>
     <link rel="shortcut icon" href="../assets/enews.png">
     <link rel="stylesheet" href="../css/style.css">
@@ -13,22 +14,49 @@
 </head>
 
 <body>
-    <main class="general">
-        <div class="box-1">
-            <h1 class="title-1">Esports News</h1>
+    <header class="nav-bar">
+        <div class="tittle-1">
+            <h1>Esports News</h1>
         </div>
         <div class="box-2">
             <ul>
                 <li><a href="../index.html">Inicio</a> </li>
-                <li><a href="./pages/Esports.html">Esports</a></li>
-                <li><a href="./pages/juegos.html">Juegos</a></li>
-                <li><a href="./pages/login.html">LogIn</a></li>
-                <li><a href="./pages/nosotros.html">Nosotros</a></li>
+                <li><a href="./Esports.html">Esports</a></li>
+                <li><a href="./juegos.html">Juegos</a></li>
+                <li><a href="./login.html">LogIn</a></li>
+                <li><a href="./nosotros.html">Nosotros</a></li>
             </ul>
         </div>
-        </header>
-
-        <div class="clase-imagenes animated pulse">
+    </header>
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./Esports.html">Esports</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./juegos.html">Juegos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./login.html">LogIn</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+            </li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+    <main class="contenedor-imagenes">
+        <div class=" animated pulse">
             <div class="img-lol">
                 <img src="../assets/lol (1).jpg" alt="">
 
@@ -41,19 +69,19 @@
                 <img src="../assets/valorantt.png" alt="">
             </div>
         </div>
-
+    
+    </main>
+    <footer class="footer-general">
         <div class="box-5">
             <ul>
-                <li><a href="index.html" target="_blank"> <i class="fa-brands fa-facebook-f" > </i> facebook </a></li>
+                <li><a href="index.html" target="_blank"> <i class="fa-brands fa-facebook-f"> </i> facebook </a></li>
                 <li><a href="esports" target="_blank"><i class="fa-brands fa-twitter"> </i> twitter</a></li>
                 <li><a href="juegos" target="_blank"><i class="fa-brands fa-instagram"></i> instagram</a></li>
                 <li><a href="login" target="_blank"><i class="fa-solid fa-envelope"></i> correo</a></li>
             </ul>
         </div>
-
-
-    </main>
-
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
