--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <title>EsportsNews</title>
     <link rel="shortcut icon" href="../assets/enews.png">
     <link rel="stylesheet" href="./css/style.css">
@@ -13,9 +14,9 @@
 </head>
 
 <body>
-    <main class="general">
-        <div class="box-1">
-            <h1 class="title-1">Esports News</h1>
+    <header class="nav-bar">
+        <div class="tittle-1">
+            <h1>Esports News</h1>
         </div>
         <div class="box-2">
             <ul>
@@ -26,19 +27,36 @@
                 <li><a href="./pages/nosotros.html">Nosotros</a></li>
             </ul>
         </div>
-        <div class="box-3">
-            <aside class="tituloAside">
-                <h2>¿Fnatic lo logrará?</h2> <br> <br>
-                <p>
-                    En la última semana de LEC, Fnatic perdió el 'Clásico' contra G2 Esports de manera clara,
-                    confirmando su mala racha pese a ganar a BDS y SK (dos de los equipos más débiles), ya que ha
-                    perdido contra G2, MAD Lions, Rogue, Vitality, Excel o Vitality. <br><br>
-                    La situación de Fnatic es crítica, porque de no entrar a playoffs perderían el tren a Worlds 2022;
-                    Solo 4 equipos se clasifican al torneo y G2 Esports y Rogue, prácticamente en la siguiente fase,
-                    están por delante de ellos en puntos.
-                </p>
-            </aside>
+    </header>
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="./pages/inicio.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./pages/Esports.html">Esports</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./pages/juegos.html">Juegos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./pages/login.html">LogIn</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+            </li>
+            </ul>
         </div>
+        </div>
+    </nav>
+    <main class="noticias-index">
+        
         <div class="box-4">
             <h2>G2 campeón de EW</h2>
             <p>G2 Esports completó la remada completa desde el lower bracket y suma un nuevo título a sus vitrinas tras
@@ -74,6 +92,21 @@
                 día.
                 Además, Jankos supo leer bastante bien a Malrang y su crecimiento en los momentos clutch se notan.</p>
         </div>
+        <div class="box-3">
+            <aside class="titulo-aside">
+                <h2>¿Fnatic lo logrará?</h2> <br> <br>
+                <p>
+                    En la última semana de LEC, Fnatic perdió el 'Clásico' contra G2 Esports de manera clara,
+                    confirmando su mala racha pese a ganar a BDS y SK (dos de los equipos más débiles), ya que ha
+                    perdido contra G2, MAD Lions, Rogue, Vitality, Excel o Vitality. <br><br>
+                    La situación de Fnatic es crítica, porque de no entrar a playoffs perderían el tren a Worlds 2022;
+                    Solo 4 equipos se clasifican al torneo y G2 Esports y Rogue, prácticamente en la siguiente fase,
+                    están por delante de ellos en puntos.
+                </p>
+            </aside>
+        </div>
+    </main>
+    <footer class="footer-general">
         <div class="box-5">
             <ul>
                 <li><a href="index.html" target="_blank"> <i class="fa-brands fa-facebook-f"> </i> facebook </a></li>
@@ -82,9 +115,8 @@
                 <li><a href="login" target="_blank"><i class="fa-solid fa-envelope"></i> correo</a></li>
             </ul>
         </div>
-
-    </main>
-
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
