--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/enews.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../assets/enews.png">
-    <title>Enews</title>
+    <script src="https://kit.fontawesome.com/ffccab623d.js" crossorigin="anonymous"></script>
+    <title>EsportsNews</title>
 </head>
 
 <body>
-    <header>
-        <section class="container-menu">
-            <h1 class="title-1">Esports News</h1>
-        </section>
-        <div class="nav">
+    <header class="nav-bar">
+        <div class="tittle-1">
+            <h1 >Esports News</h1>
+        </div>
+
+
+        <div class="box-2">
             <ul>
                 <li><a href="../index.html">Inicio</a> </li>
                 <li><a href="./Esports.html">Esports</a></li>
@@ -25,75 +29,99 @@
             </ul>
         </div>
     </header>
-    <main>
-        <section>
-            <div>
-                <h2>¡Bienvenidos a la versión que se jugará en Worlds 2022! </h2>
-                <p>
-
-                    En esta versión 12.18 continuaremos con el trabajo que hemos llevado adelante en las últimas dos
-                    versiones, así que nos enfocaremos en debilitar algunas selecciones con un desempeño demasiado bueno
-                    en el juego profesional, como Kalista y Lulu, mientras le conferimos un poco de poder a campeones
-                    menos escogidos. Estos cambios serán muy tenues, ya que nuestro objetivo no es cambiar el metajuego
-                    en las eliminatorias. Y, sin más demora, ¡que empiece Worlds!
-
-                    ¡El evento nuevo de TFT, Secretos de los Bajíos, comenzará en esta versión con Pengu y compañía
-                    intentando explorar los Reinos Inexplorados! ¡Descubre esta aventura nueva y más en las notas de la
-                    versión de TFT aquí! <a
-                        href="https://www.leagueoflegends.com/es-mx/news/game-updates/patch-12-18-notes/"
-                        target="_blank">(click aqui)</a>
-                </p>
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Esports.html">Esports</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./juegos.html">Juegos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./login.html">LogIn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                </ul>
             </div>
-        </section>
+        </div>
+    </nav>
+    <main class="box-noticias">
 
-        <section>
-            <div>
-                <h2>Counter Strike: Global Offensive revoluciona su matchmaking y cambia el rango a todos los jugadores
-                </h2>
-                <P>
-                    Día importante para el matchmaking de Counter-Strike: Global Offensive. El archiconocido shooter
-                    mutlijugador de Valve, clásico entre clásicos, miembro de honor de todo locutorio y grupo de amigos
-                    que se precie, cambiará por fin su algoritmo y el sistema de emparejamiento online de sus partidas.
-                    Una respuesta a las quejas de gran parte de la comunidad ante los problemas y las colas para
-                    encontrar enfrentamientos equilibrados, así como a ciertos programas y aplicaciones de terceros que
-                    alteran el sistema para echar de las listas de espera a los de usuarios de mayor rango y nivel
-                </P>
+        <div class="box-league">
+            <h2>¡Bienvenidos a la versión que se jugará en Worlds 2022! </h2>
+            <p>
 
-            </div>
+                En esta versión 12.18 continuaremos con el trabajo que hemos llevado adelante en las últimas dos
+                versiones, así que nos enfocaremos en debilitar algunas selecciones con un desempeño demasiado bueno
+                en el juego profesional, como Kalista y Lulu, mientras le conferimos un poco de poder a campeones
+                menos escogidos. Estos cambios serán muy tenues, ya que nuestro objetivo no es cambiar el metajuego
+                en las eliminatorias. Y, sin más demora, ¡que empiece Worlds!
 
-            <div>
-                <h2>Actualizaciones de Agentes</h2>
-                <h3>Phoenix</h3>
-                <p>
-                    Creemos que el Destello en Curva de Phoenix es la piedra angular de su conjunto y, a medida que
-                    evaluábamos cómo ajustarla, concluimos que, si la potenciábamos, potenciaría su conjunto en su
-                    totalidad. Así que queríamos evaluar a Phoenix en un escenario en el que Destello en Curva fuese más
-                    competitivo con el resto del ecosistema para entender qué impacto tendrían los ajustes. Creemos que
-                    Phoenix es un agente de asalto, así que los cambios adicionales a Va de Fuego y Muro Abrasador
-                    tienen como objetivo reforzar sus perfil proactivo al avanzar o combatir en las primeras rondas.
-                <h3>Yoru</h3>
-                Nos dimos cuenta de que los jugadores de Yoru suelen tener dificultades para armar una jugada maestra al
-                obtener su definitiva. Esperamos que estos cambios mitiguen un poco el problema y que los incentive a
-                usar su destello en conjunto con su definitiva, además de prevenir patrones de juego negativos que les
-                impidan a los enemigos contraatacar.
-                </p>
-            </div>
+                ¡El evento nuevo de TFT, Secretos de los Bajíos, comenzará en esta versión con Pengu y compañía
+                intentando explorar los Reinos Inexplorados! ¡Descubre esta aventura nueva y más en las notas de la
+                versión de TFT <a
+                href="https://www.leagueoflegends.com/es-mx/news/game-updates/patch-12-18-notes/"
+                target="_blank">(aqui!)</a>
+            </p>
+        </div>
 
-        </section>
-    </main>
-    <footer>
-        <div class="containerFooter">
-            <ul>
-                <li><a href="index.html">facebook </a> </li>
-                <li><a href="esports">twitter</a></li>
-                <li><a href="juegos">instagram</a></li>
-                <li><a href="login">correo</a></li>
-
-            </ul>
+        <div class="box-css">
+            <h2>Counter Strike: Global Offensive revoluciona su matchmaking y cambia el rango a todos los jugadores
+            </h2>
+            <P>
+                Día importante para el matchmaking de Counter-Strike: Global Offensive. El archiconocido shooter
+                mutlijugador de Valve, clásico entre clásicos, miembro de honor de todo locutorio y grupo de amigos
+                que se precie, cambiará por fin su algoritmo y el sistema de emparejamiento online de sus partidas.
+                Una respuesta a las quejas de gran parte de la comunidad ante los problemas y las colas para
+                encontrar enfrentamientos equilibrados, así como a ciertos programas y aplicaciones de terceros que
+                alteran el sistema para echar de las listas de espera a los de usuarios de mayor rango y nivel
+            </P>
 
         </div>
-    </footer>
 
+        <div class="box-valo">
+            <h2>Actualizaciones de Agentes:</h2>
+            <h3>Phoenix</h3>
+            <p>
+                Creemos que el Destello en Curva de Phoenix es la piedra angular de su conjunto y, a medida que
+                evaluábamos cómo ajustarla, concluimos que, si la potenciábamos, potenciaría su conjunto en su
+                totalidad. Así que queríamos evaluar a Phoenix en un escenario en el que Destello en Curva fuese más
+                competitivo con el resto del ecosistema para entender qué impacto tendrían los ajustes. Creemos que
+                Phoenix es un agente de asalto, así que los cambios adicionales a Va de Fuego y Muro Abrasador
+                tienen como objetivo reforzar sus perfil proactivo al avanzar o combatir en las primeras rondas.
+            <h3>Yoru</h3>
+            Nos dimos cuenta de que los jugadores de Yoru suelen tener dificultades para armar una jugada maestra al
+            obtener su definitiva. Esperamos que estos cambios mitiguen un poco el problema y que los incentive a
+            usar su destello en conjunto con su definitiva, además de prevenir patrones de juego negativos que les
+            impidan a los enemigos contraatacar.
+            </p>
+        </div>
+
+    </main>
+    <footer class="footer-general">
+        <div class="box-5">
+            <ul>
+                <li><a href="index.html" target="_blank"> <i class="fa-brands fa-facebook-f"> </i> facebook </a></li>
+                <li><a href="esports" target="_blank"><i class="fa-brands fa-twitter"> </i> twitter</a></li>
+                <li><a href="juegos" target="_blank"><i class="fa-brands fa-instagram"></i> instagram</a></li>
+                <li><a href="login" target="_blank"><i class="fa-solid fa-envelope"></i> correo</a></li>
+            </ul>
+        </div>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 
