--- a/pages/login.html
+++ b/pages/login.html
@@ -7,28 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EsportsNews</title>
     <style type="text/css"></style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="shortcut icon" href="../assets/enews.png">
     <script src="https://kit.fontawesome.com/ffccab623d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
 <body>
-    <header>
-        <section class="container-menu">
-            <h1 class="title-1">Esports News</h1>
-        </section>
-        <div class="nav">
+    <header class="nav-bar">
+        <div class="tittle-1">
+            <h1>Esports News</h1>
+        </div>
+        <div class="box-2">
             <ul>
-                <li><a href="./index.html">Inicio</a> </li>
-                <li><a href="./pages/Esports.html">Esports</a></li>
-                <li><a href="./pages/juegos.html">Juegos</a></li>
-                <li><a href="./pages/login.html">LogIn</a></li>
-                <li><a href="./pages/nosotros.html">Nosotros</a></li>
+                <li><a href="../index.html">Inicio</a> </li>
+                <li><a href="./Esports.html">Esports</a></li>
+                <li><a href="./juegos.html">Juegos</a></li>
+                <li><a href="./login.html">LogIn</a></li>
+                <li><a href="./nosotros.html">Nosotros</a></li>
             </ul>
         </div>
-
     </header>
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./Esports.html">Esports</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./juegos.html">Juegos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./login.html">LogIn</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+            </li>
+            </ul>
+        </div>
+        </div>
+    </nav>
     <main>
         <div class="conteiner">
             <div class="loginContainer">
@@ -60,18 +87,17 @@
         </div>
 
     </main>
-    <footer>
-        <div class="containerFooter">
+    <footer class="footer-general">
+        <div class="box-5">
             <ul>
-                <li><a href="index.html">facebook </a></li>
-                <li><a href="esports">twitter</a></li>
-                <li><a href="juegos">instagram</a></li>
-                <li><a href="login">correo</a></li>
+                <li><a href="index.html" target="_blank"> <i class="fa-brands fa-facebook-f"> </i> facebook </a></li>
+                <li><a href="esports" target="_blank"><i class="fa-brands fa-twitter"> </i> twitter</a></li>
+                <li><a href="juegos" target="_blank"><i class="fa-brands fa-instagram"></i> instagram</a></li>
+                <li><a href="login" target="_blank"><i class="fa-solid fa-envelope"></i> correo</a></li>
             </ul>
         </div>
     </footer>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
