--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <title>EsportsNews</title>
     <style type="text/css"></style>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../assets/enews.png">
+    <script src="https://kit.fontawesome.com/ffccab623d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
-        <section class="container-menu">
-            <h1 class="title-1">Esports News</h1>
-        </section>
-        <div class="nav">
+    <header class="nav-bar">
+        <div class="tittle-1">
+            <h1>Esports News</h1>
+        </div>
+        <div class="box-2">
             <ul>
                 <li><a href="../index.html">Inicio</a> </li>
                 <li><a href="./Esports.html">Esports</a></li>
@@ -25,27 +28,63 @@
             </ul>
         </div>
     </header>
-    <main>
-    <section>
-        <h2>Somos EsportsEnews</h2>
-        <p>Somos un grupo de personas apasionadas por el mundo del gaming y quisimos compartir nuestra pasion con otros interesados.</p> <!--aqui iria mas texto sobre nosotros , con una imagen de fondo arriba-->
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Esports.html">Esports</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./juegos.html">Juegos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./login.html">LogIn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="contenedor-nosotros">
+        <div class="imagen-esports">
+            <img src="../assets/esports_1117998205_60112_1440x600.jpg" alt="">
+        </div>
+        <div class="nosotros">
+            <h2 class="titulo-somos">Somos Esports News</h2>
+            <p class="parrafo-1">Esports News se fundó en 2021 para desarrollar, publicar contenido sobre los juegos y
+                en los jugadores
+                del mundo. La empresa fue fundada por Juan Miralles un joven apasionado por los Esports que se vio
+                en la necesidad de compartir su pasión con otros usuarios de habla hispana.</p>
+           
+            <!--aqui iria mas texto sobre nosotros-->
 
-    </section>
+        </div>
     </main>
 
 
-    
-    <footer>
-        <div class="containerFooter">
+
+    <footer class="footer-general">
+        <div class="box-5">
             <ul>
-                <li><a href="index.html">facebook </a> </li>
-                <li><a href="esports">twitter</a></li>
-                <li><a href="juegos">instagram</a></li>
-                <li><a href="login">correo</a></li>
-
+                <li><a href="index.html" target="_blank"> <i class="fa-brands fa-facebook-f"> </i> facebook </a></li>
+                <li><a href="esports" target="_blank"><i class="fa-brands fa-twitter"> </i> twitter</a></li>
+                <li><a href="juegos" target="_blank"><i class="fa-brands fa-instagram"></i> instagram</a></li>
+                <li><a href="login" target="_blank"><i class="fa-solid fa-envelope"></i> correo</a></li>
             </ul>
-
         </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
