--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <title>EsportsNews</title>
+    <title>Nosotros</title>
     <style type="text/css"></style>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../assets/enews.png">
+    <meta name="keywords" content="juegos,leagueoflegends,Counter-Strike,valorant, esports, videojuegos">
+    <link rel="shortcut icon" href="../assets/champion.png">
     <script src="https://kit.fontawesome.com/ffccab623d.js" crossorigin="anonymous"></script>
 </head>
 
@@ -66,7 +67,7 @@
                 en los jugadores
                 del mundo. La empresa fue fundada por Juan Miralles un joven apasionado por los Esports que se vio
                 en la necesidad de compartir su pasión con otros usuarios de habla hispana.</p>
-           
+
             <!--aqui iria mas texto sobre nosotros-->
 
         </div>
@@ -77,10 +78,14 @@
     <footer class="footer-general">
         <div class="box-5">
             <ul>
-                <li><a href="index.html" target="_blank"> <i class="fa-brands fa-facebook-f"> </i> facebook </a></li>
-                <li><a href="esports" target="_blank"><i class="fa-brands fa-twitter"> </i> twitter</a></li>
-                <li><a href="juegos" target="_blank"><i class="fa-brands fa-instagram"></i> instagram</a></li>
-                <li><a href="login" target="_blank"><i class="fa-solid fa-envelope"></i> correo</a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"> <i class="fa-brands fa-facebook-f"> </i>
+                        facebook </a></li>
+                <li><a href="https://twitter.com/?lang=es" target="_blank"><i class="fa-brands fa-twitter"> </i>
+                        twitter</a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>
+                        instagram</a></li>
+                <li><a href="https://outlook.live.com/mail/0/" target="_blank"><i class="fa-solid fa-envelope"></i>
+                        correo</a></li>
             </ul>
         </div>
     </footer>
