--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <title>EsportsNews</title>
-    <link rel="shortcut icon" href="../assets/enews.png">
+    <title>Inicio</title>
+    <meta name="keywords" content="juegos,leagueoflegends,Counter-Strike,valorant, esports, videojuegos">
+    <link rel="shortcut icon" href="./assets/champion.png">
     <link rel="stylesheet" href="./css/style.css">
     <style type="text/css"></style>
     <script src="https://kit.fontawesome.com/ffccab623d.js" crossorigin="anonymous"></script>
@@ -30,33 +31,34 @@
     </header>
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="./pages/inicio.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./pages/Esports.html">Esports</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./pages/juegos.html">Juegos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./pages/login.html">LogIn</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-            </li>
-            </ul>
-        </div>
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/inicio.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/Esports.html">Esports</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/juegos.html">Juegos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/login.html">LogIn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <main class="noticias-index">
-        
+
         <div class="box-4">
             <h2>G2 campeón de EW</h2>
             <p>G2 Esports completó la remada completa desde el lower bracket y suma un nuevo título a sus vitrinas tras
@@ -109,10 +111,14 @@
     <footer class="footer-general">
         <div class="box-5">
             <ul>
-                <li><a href="index.html" target="_blank"> <i class="fa-brands fa-facebook-f"> </i> facebook </a></li>
-                <li><a href="esports" target="_blank"><i class="fa-brands fa-twitter"> </i> twitter</a></li>
-                <li><a href="juegos" target="_blank"><i class="fa-brands fa-instagram"></i> instagram</a></li>
-                <li><a href="login" target="_blank"><i class="fa-solid fa-envelope"></i> correo</a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"> <i class="fa-brands fa-facebook-f"> </i>
+                        facebook </a></li>
+                <li><a href="https://twitter.com/?lang=es" target="_blank"><i class="fa-brands fa-twitter"> </i>
+                        twitter</a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>
+                        instagram</a></li>
+                <li><a href="https://outlook.live.com/mail/0/" target="_blank"><i class="fa-solid fa-envelope"></i>
+                        correo</a></li>
             </ul>
         </div>
     </footer>
