--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -7,15 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../assets/enews.png">
+    <link rel="shortcut icon" href="../assets/champion.png">
+    <meta name="keywords" content="juegos,leagueoflegends,Counter-Strike,valorant, esports, videojuegos">
     <script src="https://kit.fontawesome.com/ffccab623d.js" crossorigin="anonymous"></script>
-    <title>EsportsNews</title>
+    <title>Juegos</title>
 </head>
 
 <body>
     <header class="nav-bar">
         <div class="tittle-1">
-            <h1 >Esports News</h1>
+            <h1>Esports News</h1>
         </div>
 
 
@@ -71,9 +72,8 @@
 
                 ¡El evento nuevo de TFT, Secretos de los Bajíos, comenzará en esta versión con Pengu y compañía
                 intentando explorar los Reinos Inexplorados! ¡Descubre esta aventura nueva y más en las notas de la
-                versión de TFT <a
-                href="https://www.leagueoflegends.com/es-mx/news/game-updates/patch-12-18-notes/"
-                target="_blank">(aqui!)</a>
+                versión de TFT <a href="https://www.leagueoflegends.com/es-mx/news/game-updates/patch-12-18-notes/"
+                    target="_blank">(aqui!)</a>
             </p>
         </div>
 
@@ -113,10 +113,14 @@
     <footer class="footer-general">
         <div class="box-5">
             <ul>
-                <li><a href="index.html" target="_blank"> <i class="fa-brands fa-facebook-f"> </i> facebook </a></li>
-                <li><a href="esports" target="_blank"><i class="fa-brands fa-twitter"> </i> twitter</a></li>
-                <li><a href="juegos" target="_blank"><i class="fa-brands fa-instagram"></i> instagram</a></li>
-                <li><a href="login" target="_blank"><i class="fa-solid fa-envelope"></i> correo</a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"> <i class="fa-brands fa-facebook-f"> </i>
+                        facebook </a></li>
+                <li><a href="https://twitter.com/?lang=es" target="_blank"><i class="fa-brands fa-twitter"> </i>
+                        twitter</a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>
+                        instagram</a></li>
+                <li><a href="https://outlook.live.com/mail/0/" target="_blank"><i class="fa-solid fa-envelope"></i>
+                        correo</a></li>
             </ul>
         </div>
 
